--- a/LogIn.html
+++ b/LogIn.html
@@ -7,29 +7,22 @@
     <meta charset="UTF-8">
     <title>LogIn</title>
     <link rel="stylesheet" href="LogIn.css">
-    <style>
-        body {
-            background-image: url("v904-nunny-012.jpg");
-            height: 100vh;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-        }
-    </style>
 </head>
 
 <body>
 <div class="box1">
     <div class="box3">
         <div class="text1"> Log In</div>
-        <div class="div1"> <span class="text4">Sing Up </span> <input type="checkbox" id="toggle-button" class="toggle-button"> <label for="toggle-button" class="text"></label>
+        <div class="div1"><span class="text4">Sing Up </span> <input type="checkbox" id="toggle-button"
+                                                                     class="toggle-button"> <label for="toggle-button"
+                                                                                                   class="text"></label>
         </div>
     </div>
     <div class="box2">
         <div><input class="text3" type="text" placeholder="Email adress"></div>
         <div><input class="password1" type="password" placeholder="Password"></div>
+        <div><input class="submit1" type="button" value="Отправить"></div>
     </div>
-
 </div>
 
 </body>
