--- a/LogIn.html
+++ b/LogIn.html
@@ -6,24 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>LogIn</title>
-    <link rel="stylesheet" href="LogIn.css">
+    <link rel="stylesheet" href="style/LogIn.css">
+    <link rel="stylesheet" href="style/normalize.css">
+    <!--    <link rel="stylesheet" href="src/auth.js">-->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans"/>
 </head>
 
 <body>
-<div class="box1">
-    <div class="box3">
-        <div class="text1"> Log In</div>
-        <div class="div1"><span class="text4">Sing Up </span> <input type="checkbox" id="toggle-button"
-                                                                     class="toggle-button"> <label for="toggle-button"
-                                                                                                   class="text"></label>
+<div class="auth-user">
+    <div class="auth-user__title">
+        <div class="auth-user__title__type-text"> Log In</div>
+        <div class="auth-user__title__type-choice">
+            <span class="auth-user__title__type-choice__text">Sing Up </span>
+            <input type="checkbox" id="toggle-button" class="toggle-button">
+            <label for="toggle-button" class="text"></label>
         </div>
     </div>
-    <div class="box2">
-        <div><input class="text3" type="text" placeholder="Email adress"></div>
-        <div><input class="password1" type="password" placeholder="Password"></div>
-        <div><input class="submit1" type="button" value="Отправить"></div>
+
+    <div class="auth-user__input">
+        <input class="auth-user__input__mail" type="text" placeholder="Email adress">
+        <input class="auth-user__input__password" type="password" placeholder="Password">
+        <button class="auth-user__input__button" id="auth-user__input__button">Log In</button>
     </div>
 </div>
 
+<script src="src/auth.js"></script>
 </body>
+
 </html>
