--- a/LogIn.html
+++ b/LogIn.html
@@ -8,25 +8,44 @@
     <title>LogIn</title>
     <link rel="stylesheet" href="style/LogIn.css">
     <link rel="stylesheet" href="style/normalize.css">
-    <!--    <link rel="stylesheet" href="src/auth.js">-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans"/>
 </head>
 
 <body>
 <div class="auth-user">
-    <div class="auth-user__title">
-        <div class="auth-user__title__type-text"> Log In</div>
-        <div class="auth-user__title__type-choice">
-            <span class="auth-user__title__type-choice__text">Sing Up </span>
+    <div class="auth-title">
+        <div class="auth-title__type-auth" id="auth-title__type-auth"> Log In</div>
+        <div class="auth-title__type-choice">
+            <span class="auth-title__type-choice__text" id="auth-title__type-choice__text">Sing Up </span>
             <input type="checkbox" id="toggle-button" class="toggle-button">
             <label for="toggle-button" class="text"></label>
         </div>
     </div>
 
-    <div class="auth-user__input">
-        <input class="auth-user__input__mail" type="text" placeholder="Email adress">
-        <input class="auth-user__input__password" type="password" placeholder="Password">
-        <button class="auth-user__input__button" id="auth-user__input__button">Log In</button>
+    <div class="auth-input">
+        <div class="auth-input-mail auth-input--margin">
+            <input type="email" class="auth-input-transparent" id="auth-input-mail__input" placeholder="Mail address">
+            <b class="auth-input__invalid-input" id="auth-input-mail__invalid-input">Invalid mail</b>
+        </div>
+
+        <div class="auth-input-username auth-input--margin" id="auth-input-username">
+            <input type="email" class="auth-input-transparent" id="auth-input-username__input" placeholder="Username">
+            <b class="auth-input__invalid-input" id="auth-input-username__invalid-input">Invalid username</b>
+        </div>
+
+        <div class="auth-input-password auth-input--margin">
+            <input id="auth-input-password__input" class="auth-input-transparent" type="password"
+                   placeholder="Password">
+            <b class="auth-input__invalid-input" id="auth-input-password__invalid-input">Invalid password</b>
+        </div>
+
+        <div class="auth-input-password-again auth-input--margin" id="auth-input-password-again">
+            <input class="auth-input-transparent" id="auth-input-password-again__input" type="password"
+                   placeholder="Password again">
+            <b class="auth-input__invalid-input" id="auth-input-password-again__invalid-input">Invalid password again</b>
+        </div>
+
+        <button id="auth-input__log-in-button">Log In</button>
     </div>
 </div>
 
