--- a/learn_word.html
+++ b/learn_word.html
@@ -3,21 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Word</title>
+
+    <script src="src/const.js"></script>
+    <script src="src/checkAuth.js"></script>
+
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/word.css">
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/content.css">
+    <link rel="stylesheet" href="style/block_transparency.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 
 <header class="header">
     <div class="header-list">
-        <h2 class="header-list__site-name">WORDLIN</h2>
-        <a class="header__all-list" href="./word_lists.html">public lists</a>
+        <a class="header-list__link-main" href="./main.html">
+            <h2 class="header-list__site-name">WORDLIN</h2>
+        </a>
+        <a class="header__all-list" href="./public_word_lists.html">public lists</a>
         <a class="header__all-list" href="./user_word_lists.html">my lists</a>
     </div>
     <div class="header-profile">
@@ -25,24 +33,23 @@
     </div>
 </header>
 
-<div class="content">
+<div class="content transparency">
     <div class="content-button">
-        <h4 class="content-button__text">
-            Word
+        <h4 class="content-button__text" id="content-button__text">
         </h4>
-        <div class="input-translate">
+        <div class="input-translate ">
             <div class="buttons-word-knowledge">
-                <button class="input-translate__button">
+                <button class="input-translate__button transparency" id="dont-remember">
                     don't remember
                 </button>
-                <button class="input-translate__button">
+                <button class="input-translate__button transparency" id="remember">
                     remember
                 </button>
             </div>
         </div>
     </div>
 </div>
-<script src="src/const.js"></script>
 <script src="src/setHeader.js"></script>
+<script src="src/learnWord.js"></script>
 </body>
 </html>
