updated main page

--- a/main.html
+++ b/main.html
@@ -35,21 +35,10 @@
     <a class="content-link" href="./learn_word.html">
         <button class="content-button transparency">
             <h4 class="content-button__text">
-                Learn new word
+                Learn word
             </h4>
         </button>
     </a>
-    <!--    <button class="content-button transparency">-->
-    <!--        <h4 class="content-button__text">-->
-    <!--            Review Words-->
-    <!--        </h4>-->
-    <!--    </button>-->
-
-    <!--    <button class="content-button transparency">-->
-    <!--        <h4 class="content-button__text">-->
-    <!--            Mixed mod-->
-    <!--        </h4>-->
-    <!--    </button>-->
 </div>
 
 <script src="src/setHeader.js"></script>
