updated learn word

--- a/learn_word.html
+++ b/learn_word.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/content.css">
     <link rel="stylesheet" href="style/block_transparency.css">
+    <link rel="stylesheet" href="style/public_word_lists.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
@@ -39,10 +40,10 @@
         </h4>
         <div class="input-translate ">
             <div class="buttons-word-knowledge">
-                <button class="input-translate__button transparency" id="dont-remember">
+                <button class="input-translate__button word transparency" id="dont-remember">
                     don't remember
                 </button>
-                <button class="input-translate__button transparency" id="remember">
+                <button class="input-translate__button word transparency" id="remember">
                     remember
                 </button>
             </div>
